--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+/docker-compose.override.yaml
+
 ###> symfony/framework-bundle ###
 /.env.local
 /.env.local.php
@@ -8,4 +10,12 @@
 /vendor/
 ###< symfony/framework-bundle ###
 
-/docker-compose.override.yaml
+###> squizlabs/php_codesniffer ###
+/.phpcs-cache
+/phpcs.xml
+###< squizlabs/php_codesniffer ###
+
+###> phpunit/phpunit ###
+/phpunit.xml
+/.phpunit.result.cache
+###< phpunit/phpunit ###
