--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,22 @@
         "symfony/flex": "^2",
         "symfony/framework-bundle": "6.0.*",
         "symfony/runtime": "6.0.*",
-        "symfony/yaml": "6.0.*"
+        "symfony/yaml": "6.0.*",
+        "thecodingmachine/safe": "^2.0",
+        "webmozart/assert": "^1.10"
     },
     "require-dev": {
+        "phpcompatibility/php-compatibility": "^9.3",
+        "phpstan/extension-installer": "^1.1",
+        "phpstan/phpstan": "^1.3",
+        "phpstan/phpstan-doctrine": "^1.0",
+        "phpstan/phpstan-phpunit": "^1.0",
+        "phpstan/phpstan-strict-rules": "^1.1",
+        "phpstan/phpstan-symfony": "^1.0",
+        "phpstan/phpstan-webmozart-assert": "^1.0",
+        "phpunit/phpunit": "^9.5",
+        "squizlabs/php_codesniffer": "^3.6",
+        "thecodingmachine/phpstan-strict-rules": "^1.0"
     },
     "config": {
         "allow-plugins": {
