Configure code quality tooling and setup GitHub CI workflow

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 /docker-compose.override.yaml
+/reports
 
 ###> symfony/framework-bundle ###
 /.env.local
@@ -11,11 +12,14 @@
 ###< symfony/framework-bundle ###
 
 ###> squizlabs/php_codesniffer ###
-/.phpcs-cache
 /phpcs.xml
+/phpcompatibility.xml.dist
 ###< squizlabs/php_codesniffer ###
 
+###> phpstan/phpstan ###
+/phpstan.neon
+###< phpstan/phpstan ###
 ###> phpunit/phpunit ###
 /phpunit.xml
-/.phpunit.result.cache
+.phpunit.result.cache
 ###< phpunit/phpunit ###
