--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "minimum-stability": "stable",
     "prefer-stable": true,
     "require": {
-        "php": ">=8.0.2",
+        "php": "^8.1",
         "ext-ctype": "*",
         "ext-iconv": "*",
         "symfony/console": "6.0.*",
@@ -60,6 +60,16 @@
         "symfony/polyfill-php80": "*"
     },
     "scripts": {
+        "phpcs": "phpcs",
+        "phpcompatibility": "phpcs --standard=./phpcompatibility.xml.dist --runtime-set testVersion 7.4- .",
+        "phpstan": "phpstan analyse",
+        "phpunit": "vendor/bin/phpunit",
+        "checkup": [
+            "@phpcs",
+            "@phpcompatibility",
+            "@phpstan",
+            "@phpunit"
+        ],
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
             "assets:install %PUBLIC_DIR%": "symfony-cmd"
