--- a/phpcompatibility.xml.dist
+++ b/phpcompatibility.xml.dist
@@ -1,20 +1,21 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<ruleset name="Code style"
+<?xml version="1.0"?>
+<ruleset name="PHPCompatibility"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:noNamespaceSchemaLocation="vendor/squizlabs/php_codesniffer/phpcs.xsd">
-
-    <description>Check for code style.</description>
+    <description>Check for PHP version compatibility.</description>
 
     <file>.</file>
     <exclude-pattern>/var</exclude-pattern>
     <exclude-pattern>/vendor</exclude-pattern>
 
+    <config name="installed_paths" value="vendor/phpcompatibility/php-compatibility"/>
+
     <arg name="basepath" value="."/>
     <arg name="extensions" value="php"/>
     <arg name="parallel" value="8"/>
-    <arg name="cache" value="var/cache/.phpcs-cache"/>
+    <arg name="cache" value="var/cache/.phpcompatibility-cache"/>
     <arg name="colors"/>
     <arg value="sp"/>
 
-    <rule ref="PSR12"/>
+    <rule ref="PHPCompatibility"/>
 </ruleset>
