--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,8 +7,8 @@ on:
   pull_request: ~
 
 jobs:
-  code-quality:
-    name: Code quality
+  code-style:
+    name: Code style
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/rene-bos/iw-ghdw-php:8.1-ci-latest
@@ -20,17 +20,49 @@ jobs:
         run: composer install --no-ansi --no-interaction --optimize-autoloader
 
       - name: Check code style
-        continue-on-error: true
         run: composer run-script phpcs
 
+  php-compatibility:
+    name: PHP compatibility
+    runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/rene-bos/iw-ghdw-php:8.1-ci-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Install dependencies
+        run: composer install --no-ansi --no-interaction --optimize-autoloader
+        
       - name: Check PHP compatibility
-        continue-on-error: true
         run: composer run-script phpcompatibility
 
-      - name: Run static code analyses
-        continue-on-error: true
+  static-code-analysis:
+    name: Static code analysis
+    runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/rene-bos/iw-ghdw-php:8.1-ci-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Install dependencies
+        run: composer install --no-ansi --no-interaction --optimize-autoloader
+
+      - name: Run static code analysis
         run: composer run-script phpstan
 
+  unit-tests:
+    name: Unit tests
+    runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/rene-bos/iw-ghdw-php:8.1-ci-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Install dependencies
+        run: composer install --no-ansi --no-interaction --optimize-autoloader
+
       - name: Execute unit tests
-        continue-on-error: true
         run: composer run-script phpunit
