--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install dependencies
-        run: composer install --no-ansi --no-interaction --optimize-autoloader
+        run: composer install --no-interaction --optimize-autoloader
 
       - name: Check code style
         run: composer run-script phpcs
@@ -32,7 +32,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install dependencies
-        run: composer install --no-ansi --no-interaction --optimize-autoloader
+        run: composer install --no-interaction --optimize-autoloader
         
       - name: Check PHP compatibility
         run: composer run-script phpcompatibility
@@ -47,7 +47,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install dependencies
-        run: composer install --no-ansi --no-interaction --optimize-autoloader
+        run: composer install --no-interaction --optimize-autoloader
 
       - name: Run static code analysis
         run: composer run-script phpstan
@@ -62,7 +62,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install dependencies
-        run: composer install --no-ansi --no-interaction --optimize-autoloader
+        run: composer install --no-interaction --optimize-autoloader
 
       - name: Execute unit tests
         run: composer run-script phpunit
