--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
       - release-*
-      # TODO Only added for testing, should be removed before merging this branch
+      # TODO Only added for testing, should be removed before merging this branch.
       - build-docker-images
     tags:
       - v*
@@ -16,7 +16,8 @@ env:
 jobs:
   ci:
     name: CI
-    uses: rene-bos/iw-ghdw-app/.github/workflows/ci.yml@main
+    # TODO Change back to `main` branch after testing.
+    uses: rene-bos/iw-ghdw-app/.github/workflows/ci.yml@build-docker-images
 
   build-and-push-php:
     name: Build & push PHP
