--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install PHP dependencies
-        uses: ghcr.io/rene-bos/iw-ghdw-php:8.1-ci-latest
+        uses: docker://ghcr.io/rene-bos/iw-ghdw-php:8.1-ci-latest
         with:
           args: composer install --no-dev --no-interaction --optimize-autoloader
       
