--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -30,6 +30,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
+      - name: Log in to container registry
+        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+
       - name: Install PHP dependencies
         uses: docker://ghcr.io/rene-bos/iw-ghdw-php:8.1-ci-latest
         with:
@@ -58,7 +61,7 @@ jobs:
         with:
           name: source-build
 
-      - name: Log in to registry
+      - name: Log in to container registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
       - name: Extract metadata (tags, labels) for Docker
@@ -102,7 +105,7 @@ jobs:
         with:
           name: source-build
 
-      - name: Log in to registry
+      - name: Log in to container registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
       - name: Extract metadata (tags, labels) for Docker
