--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -24,6 +24,8 @@ jobs:
     # TODO Enable after testing finished
     # needs: ci
     runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/rene-bos/iw-ghdw-php:8.1-ci-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -32,9 +34,7 @@ jobs:
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
       - name: Install PHP dependencies
-        uses: docker://ghcr.io/rene-bos/iw-ghdw-php:8.1-ci-latest
-        with:
-          args: composer install --no-dev --no-interaction --optimize-autoloader
+        run: composer install --no-dev --no-interaction --optimize-autoloader
       
       - name: Upload build artifact
         uses: actions/upload-artifact@v2
