--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -34,7 +34,7 @@ jobs:
         run: composer install --no-dev --no-interaction --optimize-autoloader
 
       - name: Zip build artifact
-        run: zip -r build-source.zip ./*
+        run: zip -r build-source.zip .
 
       - name: Upload build artifact
         uses: actions/upload-artifact@v2
