--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -5,8 +5,6 @@ on:
     branches:
       - main
       - release-*
-      # TODO Only added for testing, should be removed before merging this branch.
-      - build-docker-images
     tags:
       - v*
 
@@ -14,15 +12,13 @@ env:
   REGISTRY: ghcr.io
 
 jobs:
-#  ci:
-#    name: CI
-#    # TODO Change back to `main` branch after testing.
-#    uses: rene-bos/iw-ghdw-app/.github/workflows/ci.yml@build-docker-images
+  ci:
+    name: CI
+    uses: rene-bos/iw-ghdw-app/.github/workflows/ci.yml@main
 
   build-source:
     name: Build source
-    # TODO Enable after testing finished
-    # needs: ci
+    needs: ci
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/rene-bos/iw-ghdw-php:8.1-ci-latest
