--- a/.github/workflows/deploy-azure.yml
+++ b/.github/workflows/deploy-azure.yml
@@ -19,15 +19,15 @@ jobs:
 
       - name: Create Docker Compose configuration
         run: |
-          cat <<EOF > ./infrastructure/temp/docker-compose.yaml
+          cat <<EOF > docker-compose.deploy.yaml
             version: "3.7"
-            
+          
             services:
               php:
                 image: ghcr.io/rene-bos/iw-ghdw-app-php:sha-${{ github.sha }}
                 environment:
                   APP_ENV: prod
-            
+          
               web:
                 image: ghcr.io/rene-bos/iw-ghdw-app-web::sha-${{ github.sha }}
                 ports:
@@ -35,11 +35,11 @@ jobs:
           EOF
 
       - name: View Docker Compose configuration
-        run: cat ./infrastructure/temp/docker-compose.yaml
+        run: cat docker-compose.deploy.yaml
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
           app-name: 'iw-ghdw-app'
-          configuration-file: ./infrastructure/temp/docker-compose.yaml
+          configuration-file: docker-compose.deploy.yaml
