Debug Azure connection

--- a/.github/workflows/deploy-azure.yml
+++ b/.github/workflows/deploy-azure.yml
@@ -16,6 +16,9 @@ jobs:
         uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_APP_CREDENTIALS }}
+          
+      - name: Debug Azure connection
+        run: az webapp list --resource-group "iw-ghdw"
 
       - name: Create Docker Compose configuration
         run: |
