--- a/.github/workflows/deploy-azure.yml
+++ b/.github/workflows/deploy-azure.yml
@@ -13,10 +13,11 @@ jobs:
 
     steps:
       - name: Login to Azure
-        uses: azure/login@v1
-        with:
-          creds: ${{ secrets.AZURE_APP_CREDENTIALS }}
-          
+#        uses: azure/login@v1
+#        with:
+#          creds: ${{ secrets.AZURE_APP_CREDENTIALS }}
+        run: az login --service-principal -u "${{ AZURE_CLIENT_ID }}" -p "${{ AZURE_CLIENT_SECRET }}" --tenant "${{ AZURE_TENANT_ID }}"
+
       - name: Debug Azure connection (Account)
         run: az account show
 
