--- a/.github/workflows/deploy-azure.yml
+++ b/.github/workflows/deploy-azure.yml
@@ -16,7 +16,7 @@ jobs:
 #        uses: azure/login@v1
 #        with:
 #          creds: ${{ secrets.AZURE_APP_CREDENTIALS }}
-        run: az login --service-principal -u "${{ AZURE_CLIENT_ID }}" -p "${{ AZURE_CLIENT_SECRET }}" --tenant "${{ AZURE_TENANT_ID }}"
+        run: az login --service-principal -u "${{ secrets.AZURE_CLIENT_ID }}" -p "${{ secrets.AZURE_CLIENT_SECRET }}" --tenant "${{ secrets.AZURE_TENANT_ID }}"
 
       - name: Debug Azure connection (Account)
         run: az account show
