Try fix for workflow run

--- a/.github/workflows/deploy-azure.yml
+++ b/.github/workflows/deploy-azure.yml
@@ -4,6 +4,7 @@ on:
   workflow_dispatch:
   workflow_run:
     workflows: [ "Build Docker images" ]
+    branches:
     types: [ completed ]
 
 jobs:
