--- a/.github/workflows/deploy-azure.yml
+++ b/.github/workflows/deploy-azure.yml
@@ -41,7 +41,7 @@ jobs:
                   APP_ENV: prod
           
               web:
-                image: ghcr.io/rene-bos/iw-ghdw-app-web::sha-${GITHUB_SHA::7}
+                image: ghcr.io/rene-bos/iw-ghdw-app-web:sha-${GITHUB_SHA::7}
                 ports:
                   - "8000:80"
           EOF
