--- a/.github/workflows/deploy-azure.yml
+++ b/.github/workflows/deploy-azure.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   workflow_run:
     workflows: [ "Build Docker images" ]
-    branches:
+    branches: [ "test-deployments" ]
     types: [ completed ]
 
 jobs:
