--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,3 +63,17 @@ jobs:
 
       - name: Execute unit tests
         run: composer run-script phpunit
+        
+  all-green:
+    name: All green
+    needs:
+      - code-style
+      - php-compatibility
+      - static-code-analysis
+      - unit-tests
+    runs-on: ubuntu-latest
+    steps:
+    - name: Decide whether the needed jobs succeeded or failed
+      uses: re-actors/alls-green@ed97172826e514be195bf70a7858630e7a5874fc
+      with:
+        jobs: ${{ toJSON(needs) }}
