--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,17 +7,21 @@ jobs:
   code-style:
     name: Code style
     runs-on: ubuntu-latest
-    container:
-      image: ghcr.io/rene-bos/iw-ghdw-php:8.1-ci-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
+        
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.1'
+          tools: cs2pr
 
       - name: Install dependencies
         run: composer install --no-interaction --optimize-autoloader
 
       - name: Check code style
-        run: composer run-script phpcs
+        run: composer run-script phpcs --  --report=checkstyle | cs2pr
 
   php-compatibility:
     name: PHP compatibility
