--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
         run: composer install --no-interaction --optimize-autoloader
 
       - name: Check code style
-        run: phpcs -q --report=checkstyle | cs2pr
+        run: vendor/bin/phpcs -q --report=checkstyle | cs2pr
 
   php-compatibility:
     name: PHP compatibility
