--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,32 +8,40 @@ jobs:
     name: Code style
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-        
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.1'
+          php-version: "8.1"
           tools: cs2pr
+
+      - name: Checkout repository
+        uses: actions/checkout@v2     
 
       - name: Install dependencies
         run: composer install --no-interaction --optimize-autoloader
 
+      - run: echo "::add-matcher::.github/matchers/phpcs-problem-matcher.json"
+
       - name: Check code style
-        run: vendor/bin/phpcs -q --report=checkstyle | cs2pr
+        run: composer run-script phpcs
 
   php-compatibility:
     name: PHP compatibility
     runs-on: ubuntu-latest
-    container:
-      image: ghcr.io/rene-bos/iw-ghdw-php:8.1-ci-latest
     steps:
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: "8.1"
+          tools: cs2pr
+
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v2       
 
       - name: Install dependencies
         run: composer install --no-interaction --optimize-autoloader
+
+      - run: echo "::add-matcher::.github/matchers/phpcs-problem-matcher.json"
         
       - name: Check PHP compatibility
         run: composer run-script phpcompatibility
@@ -41,9 +49,13 @@ jobs:
   static-code-analysis:
     name: Static code analysis
     runs-on: ubuntu-latest
-    container:
-      image: ghcr.io/rene-bos/iw-ghdw-php:8.1-ci-latest
     steps:
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: "8.1"
+          tools: cs2pr
+
       - name: Checkout repository
         uses: actions/checkout@v2
 
@@ -56,14 +68,21 @@ jobs:
   unit-tests:
     name: Unit tests
     runs-on: ubuntu-latest
-    container:
-      image: ghcr.io/rene-bos/iw-ghdw-php:8.1-ci-latest
     steps:
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: "8.1"
+          tools: cs2pr
+
       - name: Checkout repository
         uses: actions/checkout@v2
 
       - name: Install dependencies
         run: composer install --no-interaction --optimize-autoloader
+
+      - name: Setup problem matchers for PHPUnit
+        run: echo "::add-matcher::${{ runner.tool_cache }}/phpunit.json"
 
       - name: Execute unit tests
         run: composer run-script phpunit
