--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,20 +7,17 @@ jobs:
   code-style:
     name: Code style
     runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/rene-bos/iw-ghdw-php:8.1-ci-latest
     steps:
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: "8.1"
-          tools: cs2pr
-
       - name: Checkout repository
         uses: actions/checkout@v2
 
       - name: Install dependencies
         run: composer install --no-interaction --optimize-autoloader
 
-      - run: echo "::add-matcher::.github/matchers/phpcs-problem-matcher.json"
+      - name: Setup problem matcher for phpcs
+        run: echo "::add-matcher::.github/matchers/phpcs-problem-matcher.json"
 
       - name: Check code style
         run: composer run-script phpcs -- --report=emacs
@@ -28,20 +25,17 @@ jobs:
   php-compatibility:
     name: PHP compatibility
     runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/rene-bos/iw-ghdw-php:8.1-ci-latest
     steps:
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: "8.1"
-          tools: cs2pr
-
       - name: Checkout repository
         uses: actions/checkout@v2
 
       - name: Install dependencies
         run: composer install --no-interaction --optimize-autoloader
 
-      - run: echo "::add-matcher::.github/matchers/phpcs-problem-matcher.json"
+      - name: Setup problem matcher for phpcs
+        run: echo "::add-matcher::.github/matchers/phpcs-problem-matcher.json"
         
       - name: Check PHP compatibility
         run: composer run-script phpcompatibility -- --report=emacs
@@ -49,13 +43,9 @@ jobs:
   static-code-analysis:
     name: Static code analysis
     runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/rene-bos/iw-ghdw-php:8.1-ci-latest
     steps:
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: "8.1"
-          tools: cs2pr
-
       - name: Checkout repository
         uses: actions/checkout@v2
 
@@ -68,20 +58,16 @@ jobs:
   unit-tests:
     name: Unit tests
     runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/rene-bos/iw-ghdw-php:8.1-ci-latest
     steps:
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: "8.1"
-          tools: cs2pr
-
       - name: Checkout repository
         uses: actions/checkout@v2
 
       - name: Install dependencies
         run: composer install --no-interaction --optimize-autoloader
 
-      - name: Setup problem matchers for PHPUnit
+      - name: Setup problem matcher for PHPUnit
         run: echo "::add-matcher::${{ runner.tool_cache }}/phpunit.json"
 
       - name: Execute unit tests
