--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -14,7 +14,7 @@ env:
 jobs:
   ci:
     name: CI
-    uses: rene-bos/iw-ghdw-app/.github/workflows/ci.yml@main
+    uses: rene-bos/iw-ghdw-app/.github/workflows/ci.yml
 
   build-source:
     name: Build source
