Test automated generation of PHPStan baseline

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -79,7 +79,7 @@ jobs:
     needs:
       - code-style
       - php-compatibility
-      - static-code-analysis
+#      - static-code-analysis
       - unit-tests
     runs-on: ubuntu-latest
     steps:
