--- a/.github/workflows/phpstan-baseline.yaml
+++ b/.github/workflows/phpstan-baseline.yaml
@@ -12,6 +12,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
+      -  name: Setup PHP
+         uses: shivammathur/setup-php@16011a795d747d5f45038f96371c3b98aec5669d # v2.21.1
+         with:
+           php-version: 8.1
+
       - name: Install dependencies
         run: composer install --no-interaction --optimize-autoloader
 
