--- a/.github/workflows/phpstan-baseline.yaml
+++ b/.github/workflows/phpstan-baseline.yaml
@@ -27,7 +27,7 @@ jobs:
         id: create-pull-request
         uses: peter-evans/create-pull-request@923ad837f191474af6b1721408744feb989a4c27 # v4.0.4
         with:
-          add-paths: ./phpstan-baseline.yaml
+          add-paths: ./phpstan-baseline.neon
           commit-message: Automated update of PHPStan baseline
           branch: automated-phpstan-baseline-update
           title: Automated update of PHPStan baseline
