--- a/infrastructure/docker/php/Dockerfile
+++ b/infrastructure/docker/php/Dockerfile
@@ -1,6 +1,7 @@
-FROM ghcr.io/rene-bos/iw-ghdw-php:8.1-latest
+FROM ghcr.io/rene-bos/iw-ghdw-php:8.1-1.0.0
 
 COPY . /app
 
 # Ensure PHP can write in the `var` folder
-RUN chmod -R 0777 /app/var
+RUN mkdir -p /app/var && \
+    chmod -R 0777 /app/var
