--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,6 +5,8 @@ services:
     image: ghcr.io/rene-bos/iw-ghdw-php:8.1-ci-latest
     volumes:
       - .:/app
+    environment:
+      HELLO_SUFFIX: "!!!"
 
   web:
     image: ghcr.io/rene-bos/iw-ghdw-nginx:symfony-latest
