--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,67 +1,63 @@
-name: Deploy
+name: deploy
 on:
-    push:
-        branches:
-            - kubernetes
-    workflow_dispatch: {}
+  push:
+    branches:
+      - kubernetes
+  workflow_dispatch: { }
 
 env:
-    ACR_RESOURCE_GROUP: aks-test
-    AZURE_CONTAINER_REGISTRY: reneakstest
-    CLUSTER_NAME: aks-test
-    CLUSTER_RESOURCE_GROUP: aks-test
-    CONTAINER_NAME: iw-ghdw-app-php
-    DEPLOYMENT_MANIFEST_PATH: |
-        ./infrastructure/kubernetes/frontend-deployment.yaml
-        ./infrastructure/kubernetes/frontend-service.yaml
+  ACR_RESOURCE_GROUP: aks-test
+  AZURE_CONTAINER_REGISTRY: reneakstest
+  CHART_OVERRIDE_PATH: ./infrastructure/helm/values.yaml
+  CHART_OVERRIDES: image.repository=reneakstest.azurecr.io/iw-ghdw-app-web,image.tag=${{ github.sha }}
+  CHART_PATH: ./infrastructure/helm
+  CLUSTER_NAME: aks-test
+  CLUSTER_RESOURCE_GROUP: aks-test
+  CONTAINER_NAME: iw-ghdw-app-web
 
 jobs:
-    buildImage:
-        permissions:
-            contents: read
-            id-token: write
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v3
-            - uses: azure/login@v1.4.3
-              name: Azure login
-              with:
-                client-id: ${{ secrets.AZURE_CLIENT_ID }}
-                subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-                tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-            - name: Build and push image to ACR
-              run: az acr build --image ${{ env.CONTAINER_NAME }}:${{ github.sha }} --registry ${{ env.AZURE_CONTAINER_REGISTRY }} -g ${{ env.ACR_RESOURCE_GROUP }} -f ./infrastructure/docker/web/Dockerfile ./
-    deploy:
-        permissions:
-            actions: read
-            contents: read
-            id-token: write
-        runs-on: ubuntu-latest
-        needs:
-            - buildImage
-        steps:
-            - uses: actions/checkout@v3
-            - uses: azure/login@v1.4.3
-              name: Azure login
-              with:
-                client-id: ${{ secrets.AZURE_CLIENT_ID }}
-                subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-                tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-            - uses: azure/use-kubelogin@v1
-              name: Set up kubelogin for non-interactive login
-              with:
-                kubelogin-version: v0.0.25
-            - uses: azure/aks-set-context@v3
-              name: Get K8s context
-              with:
-                admin: "false"
-                cluster-name: ${{ env.CLUSTER_NAME }}
-                resource-group: ${{ env.CLUSTER_RESOURCE_GROUP }}
-                use-kubelogin: "true"
-            - uses: Azure/k8s-deploy@v4
-              name: Deploys application
-              with:
-                action: deploy
-                images: ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io/${{ env.CONTAINER_NAME }}:${{ github.sha }}
-                manifests: ${{ env.DEPLOYMENT_MANIFEST_PATH }}
-                namespace: iw-ghdw-app
+  buildImage:
+    permissions:
+      contents: read
+      id-token: write
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: azure/login@v1.4.3
+        name: Azure login
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+      - name: Build and push image to ACR
+        run: az acr build --image ${{ env.CONTAINER_NAME }}:${{ github.sha }} --registry ${{ env.AZURE_CONTAINER_REGISTRY }} -g ${{ env.ACR_RESOURCE_GROUP }} -f ./infrastructure/docker/web/Dockerfile ./
+  
+  deploy:
+    permissions:
+      actions: read
+      contents: read
+      id-token: write
+    runs-on: ubuntu-latest
+    needs:
+      - buildImage
+    steps:
+      - uses: actions/checkout@v3
+      - uses: azure/login@v1.4.3
+        name: Azure login
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+      - uses: azure/use-kubelogin@v1
+        name: Set up kubelogin for non-interactive login
+        with:
+          kubelogin-version: v0.0.25
+      - uses: azure/aks-set-context@v3
+        name: Get K8s context
+        with:
+          admin: "false"
+          cluster-name: ${{ env.CLUSTER_NAME }}
+          resource-group: ${{ env.CLUSTER_RESOURCE_GROUP }}
+          use-kubelogin: "true"
+      - name: Deploy application
+        run: helm upgrade --wait -i -f ${{ env.CHART_OVERRIDE_PATH }} --set ${{ env.CHART_OVERRIDES }} automated-deployment ${{ env.CHART_PATH }}
