--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -25,6 +25,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: Log in to container registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+      - name: Test pull
+        run: docker pull ghcr.io/rene-bos/iw-ghdw-nginx:symfony-1.0.0
       - uses: azure/login@v1.4.3
         name: Azure login
         with:
