Add packages read permission

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -20,6 +20,7 @@ jobs:
     permissions:
       contents: read
       id-token: write
+      packages: read
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
