Add rolling update

--- a/infrastructure/helm/templates/frontend-deployment.yaml
+++ b/infrastructure/helm/templates/frontend-deployment.yaml
@@ -1,5 +1,3 @@
-
-
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -11,6 +9,11 @@ spec:
   selector:
     matchLabels:
       app: {{ .Values.name }}
+  strategy:
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 1
+    minReadySeconds: 5
   template:
     metadata:
       labels:
