--- a/infrastructure/helm/templates/frontend-deployment.yaml
+++ b/infrastructure/helm/templates/frontend-deployment.yaml
@@ -30,9 +30,9 @@ spec:
             - containerPort: 80
           livenessProbe:
             httpGet:
-              path: /hello-world
+              path: /hello
               port: 80
           readinessProbe:
             httpGet:
-              path: /hello-world
+              path: /hello
               port: 80
