Improve reloading on config change

--- a/infrastructure/helm/templates/frontend-deployment.yaml
+++ b/infrastructure/helm/templates/frontend-deployment.yaml
@@ -2,21 +2,17 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ .Values.name }}
-  annotations:
-    reloader.stakater.com/auto: "true"
 spec:
   replicas: 2
   selector:
     matchLabels:
       app: {{ .Values.name }}
-  strategy:
-    rollingUpdate:
-      maxSurge: 1
-      maxUnavailable: 1
   template:
     metadata:
       labels:
         app: {{ .Values.name }}
+      annotations:
+        checksum/config: {{ include (print $.Template.BasePath "/frontend-configmap.yaml") . | sha256sum }}
     spec:
       containers:
         - name: php
