--- a/infrastructure/helm/templates/frontend-configmap.yaml
+++ b/infrastructure/helm/templates/frontend-configmap.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ .Values.name }}-config
+  name: {{ .Values.name }}-{{ .Release.Name }}-config
   labels:
-    app: {{ .Values.name }}
+    app: {{ .Values.name }}-{{ .Release.Name }}
 data:
   APP_ENV: "prod"
   HELLO_SUFFIX: "!"
