--- a/infrastructure/helm/templates/frontend-service.yaml
+++ b/infrastructure/helm/templates/frontend-service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Values.name }}
+  name: {{ .Values.name }}-{{ .Release.Name }}
   labels:
-    app: {{ .Values.name }}
+    app: {{ .Values.name }}-{{ .Release.Name }}
 spec:
   type: LoadBalancer
   ports:
     - port: 80
   selector:
-    app: {{ .Values.name }}
+    app: {{ .Values.name }}-{{ .Release.Name }}
