Add deploy environment

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -23,6 +23,8 @@ jobs:
       contents: read
       id-token: write
     runs-on: ubuntu-latest
+    environment:
+      name: reviewapps
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
