--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -13,7 +13,7 @@ env:
   CLUSTER_RESOURCE_GROUP: aks-test
   CONTAINER_NAME_WEB: iw-ghdw-app-web
   CONTAINER_NAME_PHP: iw-ghdw-app-php
-  VERSION_NAME: ${{ vars.github.ref_name }}
+  VERSION_NAME: ${{ github.ref_name }}
 
 jobs:
   buildImages:
@@ -27,7 +27,7 @@ jobs:
       - name: Debug
         run: |
           echo "Env: ${{ env.GITHUB_REF_NAME }}"
-          echo "Var: ${{ vars.github.ref_name  }}"
+          echo "Var: ${{ github.ref_name  }}"
           echo "Env: ${{ env.VERSION_NAME }}"
           echo "Direct env: ${VERSION_NAME}"
           echo "Modified env: ${VERSION_NAME,,}"
